plugins/groovy/testdata/highlighting/TryWithoutCatchFinally.groovy
<error descr="'try' without 'catch' or 'finally'">try</error> {}
